# pandaPIengine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generateEclipse.sh  make-configs.sh  pandaSolver  problemSolver.sh
configs/: readme.txt
configs/active/: flags-ilp.h  flags-rclmc2.h  flags-search-as1-onemod-heuristic-rc-ff.h  flags-search-as2-onemod-heuristic-dor-lp.h  flags-search-as2-onemod-heuristic-rc-add.h  flags-search-as2-onemod-heuristic-rc-ff.h  flags-search-as2-onemod-heuristic-rc-lmcut.h
configs/makePANDApros/: create-configs.sh
configs/makePANDApros/base-config/: head.h  tail.h
configs/makePANDApros/full-configs/: flags-search-as1-heuristic-dor-ilp.h  flags-search-as1-heuristic-dor-lp.h  flags-search-as1-heuristic-dor-tr-ilp.h  flags-search-as1-heuristic-dor-tr-lp.h  flags-search-as1-heuristic-dor-tr-uc-ilp.h  flags-search-as1-heuristic-dor-tr-uc-lp.h  flags-search-as1-heuristic-dor-uc-ilp.h  flags-search-as1-heuristic-dor-uc-lp.h  flags-search-as1-heuristic-lmc-andor-lms-ra.h  flags-search-as1-heuristic-lmc-andor-lms.h  flags-search-as1-heuristic-lmc-local-lms.h  flags-search-as1-heuristic-rc-add.h  flags-search-as1-heuristic-rc-ff.h  flags-search-as1-heuristic-rc-lmcut.h  flags-search-as1-onemod-heuristic-dor-ilp.h  flags-search-as1-onemod-heuristic-dor-lp.h  flags-search-as1-onemod-heuristic-dor-tr-ilp.h  flags-search-as1-onemod-heuristic-dor-tr-lp.h  flags-search-as1-onemod-heuristic-dor-tr-uc-ilp.h  flags-search-as1-onemod-heuristic-dor-tr-uc-lp.h  flags-search-as1-onemod-heuristic-dor-uc-ilp.h  flags-search-as1-onemod-heuristic-dor-uc-lp.h  flags-search-as1-onemod-heuristic-lmc-andor-lms-ra.h  flags-search-as1-onemod-heuristic-lmc-andor-lms.h  flags-search-as1-onemod-heuristic-lmc-local-lms.h  flags-search-as1-onemod-heuristic-rc-add.h  flags-search-as1-onemod-heuristic-rc-ff.h  flags-search-as1-onemod-heuristic-rc-lmcut.h  flags-search-as2-heuristic-dor-ilp.h  flags-search-as2-heuristic-dor-lp.h  flags-search-as2-heuristic-dor-tr-ilp.h  flags-search-as2-heuristic-dor-tr-lp.h  flags-search-as2-heuristic-dor-tr-uc-ilp.h  flags-search-as2-heuristic-dor-tr-uc-lp.h  flags-search-as2-heuristic-dor-uc-ilp.h  flags-search-as2-heuristic-dor-uc-lp.h  flags-search-as2-heuristic-lmc-andor-lms-ra.h  flags-search-as2-heuristic-lmc-andor-lms.h  (+47 more)
pandaPIengine/src/: CMakeLists.txt  ProgressionNetwork.cpp  flags.h
pandaPIengine/src/intDataStructures/: CMakeLists.txt  FlexIntStack.cpp  IntPairHeap.cpp  IntStack.h  IntUtil.cpp  StringUtil.cpp  StringUtil.h  bIntSet.cpp  delIterIntSet.cpp  delIterIntSet.h  noDelIntSet.h
pandaPIengine/src/search/: CMakeLists.txt  PriorityQueueSearch.h  QueueFringe.h  StackFringe.cpp  StackFringe.h  UnsortedFringe.h
src/: .gitignore  CMakeLists.txt  Debug.cpp  Debug.h  Invariants.cpp  Invariants.h  Model.cpp  Model.h  PrecsEffs.cpp  PrecsEffs.h  ProgressionNetwork.cpp  ProgressionNetwork.h  SearchEngine.cpp  Util.cpp  Util.h  VisitedList.cpp  VisitedList.h  cmdline.c  cmdline.h  debug.cpp  debug.h  flags.h  interactivePlanner.cpp  interactivePlanner.h  options.ggo
src/heuristics/: CMakeLists.txt  Heuristic.cpp  Heuristic.h  HeuristicPayload.cpp  HeuristicPayload.h  hhSimple.cpp  hhSimple.h  hhZero.cpp  hhZero.h  planningGraph.cpp  planningGraph.h
src/heuristics/dofHeuristics/: CMakeLists.txt  hhDOfree.cpp  hhDOfree.h  hhStatisticsCollector.cpp  hhStatisticsCollector.h
src/heuristics/landmarks/: CMakeLists.txt  hhLMCount.cpp  hhLMCount.h  hhLMPayload.cpp  hhLMPayload.h
src/heuristics/landmarks/lmDataStructures/: LmMap.cpp  landmark.cpp  landmark.h  lookUpTab.cpp
src/heuristics/landmarks/lmExtraction/: LMsInAndOrGraphs.cpp  LMsInAndOrGraphs.h  LmAoNode.cpp  LmAoNode.h  LmCausal.cpp  LmCausal.h  LmFdConnector.cpp
src/heuristics/rcHeuristics/: CMakeLists.txt  LMCutLandmark.cpp  LMCutLandmark.h  RCModelFactory.cpp  RCModelFactory.h  hhRC.cpp  hhRC.h  hhRC2.cpp  hhRC2.h  hsAddFF-2.cpp  hsAddFF-2.h  hsAddFF.cpp  hsAddFF.h  hsFilter.cpp  hsFilter.h  hsLmCut.cpp  hsLmCut.h
src/intDataStructures/: CMakeLists.txt  CompressedSequenceSet.cpp  CompressedSequenceSet.h  FlexIntStack.h  HashTable.cpp  HashTable.h  IntPairHeap-2.cpp  IntPairHeap-2.h  IntPairHeap.h  IntStack.cpp  IntUtil.cpp  IntUtil.h  SequenceSet.cpp  SequenceSet.h  SequenceSetCommon.h  StringUtil.cpp  bIntSet.h  bucketSet.cpp  bucketSet.h  noDelIntSet.cpp  noDelIntSet.h
src/sat/: CMakeLists.txt  disabling_graph.cpp  disabling_graph.h  ipasir.h  partial_order.cpp  partial_order.h  pdt.cpp  pdt.h  sat_encoder.cpp  sat_encoder.h  sat_planner.cpp  sat_planner.h  sog.cpp  sog.h  state_formula.cpp  state_formula.h
src/search/: CMakeLists.txt  EnforcedHillClimbing.cpp  EnforcedHillClimbing.h  PriorityQueueSearch.cpp  PriorityQueueSearch.h  QueueFringe.cpp  UnsortedFringe.cpp  UnsrtFringeContainer.cpp  UnsrtFringeContainer.h  VisitedList.cpp  VisitedList.h  primeNumbers.h
src/search/fringes/: OneQueueWAStarFringe.cpp  OneQueueWAStarFringe.h
src/search/visitedLists/: vlDummy.cpp  vlDummy.h
src/symbolic_search/: CMakeLists.txt  automaton.cpp  automaton.h  sym_variables.cpp  sym_variables.h  transition_relation.cpp  transition_relation.h
src/symbolic_search/cudd-3.0.0/autom4te.cache/: requests
src/translation/: CMakeLists.txt  htnToSAS.cpp  htnToSAS.h  translationController.cpp  translationController.h
src/verifier/: CMakeLists.txt  cmdline.c  cmdline.h  options.ggo
src/verifier/include/: verifier.h
src/verifier/sat_verifier/include/: constraints.h  depth.h  marker.h  sat_verifier.h  variables.h
src/verifier/sat_verifier/src/: constraints.cpp  depth.cpp  marker.cpp  sat_verifier.cpp  variables.cpp
src/verifier/src/: run_verifier.cpp
src/verifier/test/: CMakeLists.txt  test-invalid-plan  test-plan  test-task.sas  test_depth.cpp  test_main.cpp  test_util.cpp
src/verifier/to_verifier/include/: method_graph.h  to_verifier.h
src/verifier/to_verifier/src/: to_verifier.cpp
src/verifier/util/include/: distribution.h  execution.h  graph.h  mapping.h  mark.h  util.h
src/verifier/util/src/: distribution.cpp  execution.cpp  mark.cpp
(+56 files in other folders)
